k8s/ms1.track-method/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: track-method
  labels:
    app: track-method
