k8s/ms1.track-method/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: track-method-service
  namespace: track-method
  labels:
    app: track-method
spec:
  selector:
    app: track-method
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
