k8s/ms1.track-method/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: track-method-ingress
  namespace: track-method
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "1m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "10"
spec:
  ingressClassName: nginx
  rules:
    - host: track.anla.works
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: track-method-service
                port:
                  number: 80
